python/econf_golden.json
{
  "bootstrap": {
    "node": {
      "cluster": "ambassador-default",
      "id": "test-id"
    },
    "static_resources": {
      "clusters": [
        {
          "name": "xds_cluster",
          "connect_timeout": "1s",
          "dns_lookup_family": "V4_ONLY",
          "http2_protocol_options": {},
          "lb_policy": "ROUND_ROBIN",
          "load_assignment": {
            "cluster_name": "cluster_127_0_0_1_8003",
            "endpoints": [
              {
                "lb_endpoints": [
                  {
                    "endpoint": {
                      "address": {
                        "socket_address": {
                          "address": "127.0.0.1",
                          "port_value": 8003,
                          "protocol": "TCP"
                        }
                      }
                    }
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    "dynamic_resources": {
      "ads_config": {
        "api_type": "GRPC",
        "transport_api_version": "V3",
        "grpc_services": [
          {
            "envoy_grpc": {
              "cluster_name": "xds_cluster"
            }
          }
        ]
      },
      "cds_config": {
        "ads": {},
        "resource_api_version": "V3"
      },
      "lds_config": {
        "ads": {},
        "resource_api_version": "V3"
      }
    },
    "admin": {
      "access_log_path": "/tmp/admin_access_log",
      "address": {
        "socket_address": {
          "address": "127.0.0.1",
          "port_value": 8001
        }
      }
    },
    "layered_runtime": {
      "layers": [
        {
          "name": "static_layer",
          "static_layer": {
            "re2.max_program_size.error_level": 200
          }
        }
      ]
    },
    "stats_sinks": []
  },
  "clustermap": {
    "cluster_127_0_0_1_8877_default": {
      "port": 8877,
      "kind": "KubernetesServiceResolver",
      "service": "127.0.0.1",
      "namespace": "default"
    }
  },
  "@type": "/envoy.config.bootstrap.v3.Bootstrap",
  "static_resources": {
    "listeners": [
      {
        "name": "emissary-ingress-listener-8080",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8080,
            "protocol": "TCP"
          }
        },
        "enable_reuse_port": true,
        "filter_chains": [
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "ingress_http",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "path": "/dev/fd/1",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        }
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "normalize_path": true,
                  "use_remote_address": true,
                  "server_name": "envoy",
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "emissary-ingress-listener-8080-*",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_ready",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_ready"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_alive",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_alive"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          }
                        ]
                      }
                    ]
                  }
                }
              }
            ]
          }
        ],
        "traffic_direction": "UNSPECIFIED"
      },
      {
        "name": "emissary-ingress-listener-8443",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8443,
            "protocol": "TCP"
          }
        },
        "enable_reuse_port": true,
        "filter_chains": [
          {
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "common_tls_context": {
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "filename": "/var/folders/63/m7t5p9xn5gv4dvvfhc4xgbwr0000gp/T/null-secret-lnc397bs-cache/default/secrets-decoded/fallback-self-signed-cert/F9A674F04BA09C604354A707AEF9CE645D2F98E3.crt"
                      },
                      "private_key": {
                        "filename": "/var/folders/63/m7t5p9xn5gv4dvvfhc4xgbwr0000gp/T/null-secret-lnc397bs-cache/default/secrets-decoded/fallback-self-signed-cert/F9A674F04BA09C604354A707AEF9CE645D2F98E3.key"
                      }
                    }
                  ]
                }
              }
            },
            "filter_chain_match": {
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "ingress_https",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "path": "/dev/fd/1",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        }
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "normalize_path": true,
                  "http3_protocol_options": {},
                  "codec_type": "HTTP2",
                  "use_remote_address": true,
                  "server_name": "envoy",
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "emissary-ingress-listener-8443-*",
                        "response_headers_to_add": [
                          {
                            "header": {
                              "key": "alt-svc",
                              "value": "h3=\":443\"; ma=86400, h3-29=\":443\"; ma=86400"
                            }
                          }
                        ],
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_ready",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_ready"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_alive",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_alive"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          }
                        ]
                      }
                    ]
                  }
                }
              }
            ]
          },
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "ingress_https",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "path": "/dev/fd/1",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        }
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "normalize_path": true,
                  "http3_protocol_options": {},
                  "codec_type": "HTTP2",
                  "use_remote_address": true,
                  "server_name": "envoy",
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "emissary-ingress-listener-8443-*",
                        "response_headers_to_add": [
                          {
                            "header": {
                              "key": "alt-svc",
                              "value": "h3=\":443\"; ma=86400, h3-29=\":443\"; ma=86400"
                            }
                          }
                        ],
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_ready",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_ready"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_alive",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_alive"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          }
                        ]
                      }
                    ]
                  }
                }
              }
            ]
          }
        ],
        "traffic_direction": "UNSPECIFIED",
        "listener_filters": [
          {
            "name": "envoy.filters.listener.tls_inspector"
          }
        ]
      },
      {
        "name": "listener-udp-8443",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8443,
            "protocol": "UDP"
          }
        },
        "enable_reuse_port": true,
        "udp_listener_config": {
          "quic_options": {},
          "downstream_socket_config": {
            "prefer_gro": true
          }
        },
        "filter_chains": [
          {
            "transport_socket": {
              "name": "envoy.transport_sockets.quic",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport",
                "downstream_tls_context": {
                  "common_tls_context": {
                    "tls_certificates": [
                      {
                        "certificate_chain": {
                          "filename": "/var/folders/63/m7t5p9xn5gv4dvvfhc4xgbwr0000gp/T/null-secret-lnc397bs-cache/default/secrets-decoded/fallback-self-signed-cert/F9A674F04BA09C604354A707AEF9CE645D2F98E3.crt"
                        },
                        "private_key": {
                          "filename": "/var/folders/63/m7t5p9xn5gv4dvvfhc4xgbwr0000gp/T/null-secret-lnc397bs-cache/default/secrets-decoded/fallback-self-signed-cert/F9A674F04BA09C604354A707AEF9CE645D2F98E3.key"
                        }
                      }
                    ]
                  }
                }
              }
            },
            "filter_chain_match": {
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "ingress_https",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "path": "/dev/fd/1",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        }
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "normalize_path": true,
                  "http3_protocol_options": {},
                  "codec_type": "HTTP3",
                  "use_remote_address": true,
                  "server_name": "envoy",
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "listener-udp-8443-*",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_ready",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_ready"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_alive",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/check_alive"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/",
                              "headers": [
                                {
                                  "name": "x-forwarded-proto",
                                  "exact_match": "https"
                                }
                              ]
                            },
                            "route": {
                              "priority": null,
                              "timeout": "10.000s",
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "numerator": 100,
                                  "denominator": "HUNDRED"
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              },
                              "prefix": "/ambassador/v0/"
                            },
                            "redirect": {
                              "https_redirect": true
                            }
                          }
                        ]
                      }
                    ]
                  }
                }
              }
            ]
          }
        ],
        "traffic_direction": "UNSPECIFIED"
      }
    ],
    "clusters": [
      {
        "name": "cluster_127_0_0_1_8877_default",
        "type": "STRICT_DNS",
        "lb_policy": "ROUND_ROBIN",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "alt_stat_name": "127_0_0_1_8877",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8877_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8877,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  },
  "layered_runtime": {
    "layers": [
      {
        "name": "static_layer",
        "static_layer": {
          "re2.max_program_size.error_level": 200
        }
      }
    ]
  }
}
